--- a/libs/block-template-html/src/app.html
+++ b/libs/block-template-html/src/app.html
@@ -1,6 +1,7 @@
 <h1 data-title></h1>
 <p data-paragraph></p>
 <input type="text" data-input />
+<p data-readonly></p>
 
 <!--
     This script establishes connection with the embedding application and adds an example event handler.
