Add `simulateLatency` defaults to block templates

--- a/libs/block-template-html/dev/index.html
+++ b/libs/block-template-html/dev/index.html
@@ -55,8 +55,13 @@
             initialData=${initialData}
             blockEntityRecordId=${blockEntity.metadata.recordId}
             debug
+            simulateLatency=${{
+              min: 100,
+              max: 200,
+            }}
           />
         `;
+        // modify `simulateLatency` above to adjust the range of artificial latency (in ms)
         // remove 'debug' above to start with the debug UI minimised. You can also toggle it in the UI
         // hideDebugToggle <- add 'hideDebugToggle' to disable the debug UI entirely
         // readonly <- add this above to start your block in readonly mode. You can also toggle it in the UI
