Make the inclusion of mock data optional in MockBlockDock (#1160)
* Add `includeProvidedMockData` toggle

* Add the toggle to the block templates

* Add changesets

* Add param documentation

* Rename `includeProvidedMockData` to `includeDefaultMockData`

---------

Co-authored-by: Ciaran Morinan <37743469+CiaranMn@users.noreply.github.com>

--- a/libs/block-template-html/dev/index.html
+++ b/libs/block-template-html/dev/index.html
@@ -53,6 +53,7 @@
               },
             }}
             initialData=${initialData}
+            includeDefaultMockData
             blockEntityRecordId=${blockEntity.metadata.recordId}
             debug
             simulateDatastoreLatency=${{
@@ -61,6 +62,7 @@
             }}
           />
         `;
+        // `includeDefaultMockData` seeds the datastore with sample entities and links, remove it to start with just the contents of `initialData`
         // modify `simulateDatastoreLatency` above to adjust the range of artificial latency in responses to datastore-related requests  (in ms)
         // remove 'debug' above to start with the debug UI minimised. You can also toggle it in the UI
         // hideDebugToggle <- add 'hideDebugToggle' to disable the debug UI entirely
